# evaluate-idk

./: .gitignore  README.md  analyze_answers.py  analyze_questions.py  custom_tasks.py  evaluate.py  evaluate.sh  gpqa_diamond_idk.py  prepare_data_mmlu_lexam.py  pyproject.toml  run_eval.py  run_evaluations.py  summarize_results.py  tasks.txt
results/details/deepseek-ai/DeepSeek-V3.1-Terminus/2025-10-10T10-04-43.098271/: details_community|lexam-en-idk|0_2025-10-10T10-04-43.098271.parquet
results/results/deepseek-ai/DeepSeek-V3.1-Terminus/: results_2025-10-10T10-04-43.098271.json
results/results/openrouter/anthropic/claude-opus-4.5/: results_2025-11-24T16-18-19.699948.json
results/results/openrouter/anthropic/claude-sonnet-4/: results_2025-09-26T18-28-36.556950.json
results/results/openrouter/anthropic/claude-sonnet-4.5/: results_2025-10-09T19-11-04.471542.json  results_2025-12-12T20-36-10.749437.json
results/results/openrouter/deepseek/deepseek-v3.1-terminus/: results_2025-09-26T18-28-49.365862.json
results/results/openrouter/google/gemini-2.5-flash/: results_2025-09-26T18-28-24.630898.json  results_2025-10-21T13-31-06.041856.json
results/results/openrouter/google/gemini-2.5-pro/: results_2025-09-26T18-28-11.073300.json  results_2025-10-21T22-59-05.871188.json
results/results/openrouter/google/gemini-3-flash-preview/: results_2025-12-18T14-46-52.771203.json
results/results/openrouter/google/gemini-3-pro-preview/: results_2025-11-18T18-17-53.491808.json  results_2025-12-12T15-23-50.919930.json
(+47 files in other folders)
